microserv-user-account/src/main/java/org/example/microservuseraccount/error/exception/NotFoundIDException.java
package org.example.microservuseraccount.error.exception;

public class NotFoundIDException extends RuntimeException{
    public NotFoundIDException(String message) {
        super(message);
    }
}
